update formating of django templates to avoid whitespace below footer

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -374,6 +374,11 @@ footer a {
     margin-bottom: 2rem;
 }
 
+/* django templates */
+.min-view-height {
+    min-height: 80vh;
+}
+
 /* media query for tablet screens and larger */
 @media screen and (min-width:768px) {
 
